[package]
name = "networkurl"
version = "0.1.1"
edition = "2021"
description = "NetworkURL (nurl) — A clean, fast, and structured HTTP client CLI"
license = "MIT"
repository = "https://github.com/sapirrior/nurl"
readme = "README.md"

[[bin]]
name = "nurl"
path = "src/main.rs"

[dependencies]
clap       = { version = "4.4", features = ["derive", "suggestions", "env"] }
ureq       = { version = "2.9", features = ["tls", "json", "gzip"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64     = "0.22"        # replace hand-rolled impl
toml       = "0.8"         # config file parsing
url        = "2.5"         # query param injection
rustls     = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"


[dev-dependencies]
httpmock = "0.7"
tempfile = "3"             # temp files in body/cookie tests
